Fixing fonts and adding classes

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 
 <main>
     <section>
-        <div class="w-container">
-            <div>
+        <div class="w-container hero-image">
+            <div class="hero-text">
                 <h1>
                     Hälsokontroll
                     <span>genom blodprov</span>
