adding colors to offers

--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
     <section>
         <div class="w-container">
             <div>
-                <div>
-                    <div>
+                <div class="offer">
+                    <div class="most-popular-label">
                         <span>Mest populär</span>
                     </div>
 
-                    <div>
+                    <div class="headline burgundy-bckg">
                         <h3>
                             <a href="https://werlabs.se/werlabs-plus/" title="WerlabsPlus Medlemskap">
                                 WerlabsPlus Medlemskap
@@ -140,8 +140,8 @@
                     </div>
                 </div>
 
-                <div>
-                    <div>
+                <div  class="offer">
+                    <div class="headline oceanBlue-bckg">
                         <h3>
                             <a href="https://werlabs.se/halsokontroll-xl/" title="Hälsokontroll XL">
                                 Hälsokontroll XL
@@ -176,8 +176,8 @@
                     </div>
                 </div>
 
-                <div>
-                    <div>
+                <div class="offer">
+                    <div class="headline pineGreen-bckg">
                         <h3>
                             <a href="https://werlabs.se/halsokontroll-large/" title="Hälsokontroll Large">
                                 Hälsokontroll Large
