fixing midle section

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         </p>
                     </div>
 
-                    <div>
+                    <div class="offer-content">
                         <ul>
                             <li>
                                 Årlig <a href="https://werlabs.se/blodprov/halsokontroll-xl/">Hälsokontroll XL</a> (värde 1395 kr)
@@ -134,7 +134,7 @@
                             <span>Beställ</span>
                         </button>
 
-                        <a href="https://werlabs.se/werlabs-plus/" title="WerlabsPlus Medlemskap">
+                        <a href="https://werlabs.se/werlabs-plus/" title="WerlabsPlus Medlemskap" class="show-more">
                             <span>Visa mer</span>
                         </a>
                     </div>
@@ -153,7 +153,7 @@
                         </p>
                     </div>
 
-                    <div>
+                    <div class="offer-content">
                         <ul>
                             <li>
                                 33 hälsomarkörer
@@ -170,7 +170,7 @@
                             <span>Beställ</span>
                         </button>
 
-                        <a href="https://werlabs.se/halsokontroll-xl/" title="Hälsokontroll XL">
+                        <a href="https://werlabs.se/halsokontroll-xl/" title="Hälsokontroll XL" class="show-more">
                             <span>Visa mer</span>
                         </a>
                     </div>
@@ -189,7 +189,7 @@
                         </p>
                     </div>
 
-                    <div>
+                    <div class="offer-content">
                         <ul>
                             <li>
                                 31 hälsomarkörer
@@ -206,14 +206,14 @@
                             <span>Beställ</span>
                         </button>
 
-                        <a href="https://werlabs.se/halsokontroll-large/" title="Hälsokontroll Large">
+                        <a href="https://werlabs.se/halsokontroll-large/" title="Hälsokontroll Large" class="show-more">
                             <span>Visa mer</span>
                         </a>
                     </div>
                 </div>
             </div>
 
-            <div>
+            <div class="all-blood-tests">
                 <a href="https://werlabs.se/blodprov/">
                     Visa alla blodprov
                 </a>
