fixing footer columns

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 
 <footer class="footer">
     <div class="w-container">
-        <div>
+        <div class="footer-column">
             <a href="https://journal.werlabs.se" target="_blank">
                 <span>Öppna Min journal</span>
             </a>
@@ -323,7 +323,7 @@
             </ul>
         </div>
 
-        <div>
+        <div class="footer-column">
             <ul>
                 <li>
                     <a href="https://werlabs.se/om-werlabs/" title="Om Werlabs">
@@ -362,7 +362,7 @@
             </ul>
         </div>
 
-        <div>
+        <div class="footer-column">
             <ul>
                 <li>
                     <a href="https://werlabs.se/artiklar/" title="Artiklar">
@@ -400,7 +400,7 @@
             </ul>
         </div>
 
-        <div>
+        <div class="footer-column">
             <ul>
                 <li>
                     <a href="https://werlabs.se/om-werlabs/integritetspolicy/" title="Integritetspolicy">
@@ -440,7 +440,7 @@
             </ul>
         </div>
 
-        <div>
+        <div class="footer-column">
             <div>
                 <img src="images/werlabs-symbol.svg" alt="Werlabs">
             </div>
