--- a/index.html
+++ b/index.html
@@ -295,27 +295,27 @@
 </main>
 
 
-<footer class="footer">
+<footer>
     <div class="w-container">
         <div class="footer-column">
-            <a href="https://journal.werlabs.se" target="_blank">
+            <a href="https://journal.werlabs.se" target="_blank" class="my-journal">
                 <span>Öppna Min journal</span>
             </a>
 
-            <ul>
-                <li>
+            <ul class="no-padding">
+                <li class="social">
                     <a href="https://www.facebook.com/werlabs" target="_blank" title="Facebook">
                         <img src="images/facebook.svg" alt="Facebook">
                     </a>
                 </li>
 
-                <li>
+                <li class="social">
                     <a href="https://twitter.com/werlabs" target="_blank" title="Twitter">
                         <img src="images/twitter.svg" alt="Twitter">
                     </a>
                 </li>
 
-                <li>
+                <li class="social">
                     <a href="https://www.linkedin.com/company/werlabs" target="_blank" title="Linkedin">
                         <img src="images/linkedin.svg" alt="LinkedIn">
                     </a>
@@ -440,7 +440,7 @@
             </ul>
         </div>
 
-        <div class="footer-column">
+        <div class="footer-column logo-copyright" >
             <div>
                 <img src="images/werlabs-symbol.svg" alt="Werlabs">
             </div>
@@ -450,7 +450,7 @@
             </p>
         </div>
 
-        <div>
+        <div class="klarna">
             <p>
                 Betalning med
             </p>
