Fixing offer section

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     <section>
         <div class="w-container">
-            <div>
+            <div class="offer-display">
                 <div class="offer">
                     <div class="most-popular-label">
                         <span>Mest populär</span>
@@ -130,7 +130,7 @@
                             </li>
                         </ul>
 
-                        <button type="button" title="Beställ WerlabsPlus Medlemskap">
+                        <button type="button" title="Beställ WerlabsPlus Medlemskap" class="burgundy-btn">
                             <span>Beställ</span>
                         </button>
 
@@ -166,7 +166,7 @@
                             </li>
                         </ul>
 
-                        <button type="button" title="Beställ Hälsokontroll XL">
+                        <button type="button" title="Beställ Hälsokontroll XL" class="oceanBlue-btn">
                             <span>Beställ</span>
                         </button>
 
@@ -202,7 +202,7 @@
                             </li>
                         </ul>
 
-                        <button type="button" title="Beställ Hälsokontroll Large">
+                        <button type="button" title="Beställ Hälsokontroll Large" class="pineGreen-btn">
                             <span>Beställ</span>
                         </button>
 
