--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                             <span>Beställ</span>
                         </button>
 
-                        <a href="https://werlabs.se/werlabs-plus/" title="WerlabsPlus Medlemskap" class="show-more">
+                        <a href="https://werlabs.se/werlabs-plus/" title="WerlabsPlus Medlemskap" class="show-more burgundy">
                             <span>Visa mer</span>
                         </a>
                     </div>
@@ -170,7 +170,7 @@
                             <span>Beställ</span>
                         </button>
 
-                        <a href="https://werlabs.se/halsokontroll-xl/" title="Hälsokontroll XL" class="show-more">
+                        <a href="https://werlabs.se/halsokontroll-xl/" title="Hälsokontroll XL" class="show-more oceanBlue">
                             <span>Visa mer</span>
                         </a>
                     </div>
@@ -206,7 +206,7 @@
                             <span>Beställ</span>
                         </button>
 
-                        <a href="https://werlabs.se/halsokontroll-large/" title="Hälsokontroll Large" class="show-more">
+                        <a href="https://werlabs.se/halsokontroll-large/" title="Hälsokontroll Large" class="show-more pineGreen">
                             <span>Visa mer</span>
                         </a>
                     </div>
