Fixing padding in middle section

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 
     <section>
-        <div class="w-container">
+        <div class="w-container bottom-padding">
             <div class="offer-display">
                 <div class="offer">
                     <div class="most-popular-label">
