Fixing carousel items

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
     <section class="lp-section lp-section--why">
         <div class="w-container">
-            <div class="js-carousel-items">
+            <div class="js-carousel-items carousel">
                 <div>
                     <div>
                         <img src="images/lp-start-icon-order.svg" alt="Beställ">
