splitting scss into individual files

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="w-container">
         <div>
             <a href="#" title="Werlabs">
-                <img src="images/werlabs-logo-v2.svg" alt="Werlabs">
+                <img src="images/werlabs-logo-v2.svg" alt="Werlabs" class="logo">
             </a>
 
             <nav>
