working on the carousel

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     </div>
 
                     <div class="offer-content">
-                        <ul>
+                        <ul class="checkmark-list">
                             <li>
                                 Årlig <a href="https://werlabs.se/blodprov/halsokontroll-xl/">Hälsokontroll XL</a> (värde 1395 kr)
                             </li>
@@ -154,7 +154,7 @@
                     </div>
 
                     <div class="offer-content">
-                        <ul>
+                        <ul class="checkmark-list">
                             <li>
                                 33 hälsomarkörer
                             </li>
@@ -190,7 +190,7 @@
                     </div>
 
                     <div class="offer-content">
-                        <ul>
+                        <ul class="checkmark-list">
                             <li>
                                 31 hälsomarkörer
                             </li>
@@ -281,11 +281,12 @@
                     {
                         breakpoint: 768,
                         settings: {
-                            autoplay: true,
+                            autoplay: false,
                             autoplaySpeed: 3500,
                             speed: 500,
                             slidesToShow: 1,
-                            slidesToScroll: 1
+                            slidesToScroll: 1,
+                            dotsClass: 'slick-dots'
                         }
                     }
                 ]
