--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                 infinite: true,
                 dots: true,
                 arrows: false,
-                autoplay: false,
+                autoplay: true,
                 slidesToShow: 3,
                 slidesToScroll: 3,
                 responsive: [
