--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </section>
 
 
-    <section>
+    <section class="wave">
         <div class="w-container bottom-padding">
             <div class="offer-display">
                 <div class="offer">
@@ -274,14 +274,14 @@
                 infinite: true,
                 dots: true,
                 arrows: false,
-                autoplay: true,
+                autoplay: false,
                 slidesToShow: 3,
                 slidesToScroll: 3,
                 responsive: [
                     {
                         breakpoint: 768,
                         settings: {
-                            autoplay: false,
+                            autoplay:true,
                             autoplaySpeed: 3500,
                             speed: 500,
                             slidesToShow: 1,
