--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 </main>
 
 
-<footer>
+<footer class="wave">
     <div class="w-container">
         <div class="footer-column">
             <a href="https://journal.werlabs.se" target="_blank" class="my-journal">
