removing bottom-padding class

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 
 
     <section class="wave">
-        <div class="w-container bottom-padding">
-            <div class="offer-display">
+        <div class="w-container offer-display">
+            <div class="offers">
                 <div class="offer">
                     <div class="most-popular-label">
                         <span>Mest populär</span>
