--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <span>Mest populär</span>
                     </div>
 
-                    <div class="headline burgundy-bckg">
+                    <div class="headline primary-color-bckg">
                         <h3>
                             <a href="https://werlabs.se/werlabs-plus/" title="WerlabsPlus Medlemskap">
                                 WerlabsPlus Medlemskap
@@ -130,18 +130,18 @@
                             </li>
                         </ul>
 
-                        <button type="button" title="Beställ WerlabsPlus Medlemskap" class="burgundy-btn">
+                        <button type="button" title="Beställ WerlabsPlus Medlemskap" class="primary-color-btn">
                             <span>Beställ</span>
                         </button>
 
-                        <a href="https://werlabs.se/werlabs-plus/" title="WerlabsPlus Medlemskap" class="show-more burgundy">
+                        <a href="https://werlabs.se/werlabs-plus/" title="WerlabsPlus Medlemskap" class="show-more primary-color">
                             <span>Visa mer</span>
                         </a>
                     </div>
                 </div>
 
                 <div  class="offer">
-                    <div class="headline oceanBlue-bckg">
+                    <div class="headline secondary-color-bckg">
                         <h3>
                             <a href="https://werlabs.se/halsokontroll-xl/" title="Hälsokontroll XL">
                                 Hälsokontroll XL
@@ -166,18 +166,18 @@
                             </li>
                         </ul>
 
-                        <button type="button" title="Beställ Hälsokontroll XL" class="oceanBlue-btn">
+                        <button type="button" title="Beställ Hälsokontroll XL" class="secondary-color-btn">
                             <span>Beställ</span>
                         </button>
 
-                        <a href="https://werlabs.se/halsokontroll-xl/" title="Hälsokontroll XL" class="show-more oceanBlue">
+                        <a href="https://werlabs.se/halsokontroll-xl/" title="Hälsokontroll XL" class="show-more secondary-color">
                             <span>Visa mer</span>
                         </a>
                     </div>
                 </div>
 
                 <div class="offer">
-                    <div class="headline pineGreen-bckg">
+                    <div class="headline tertiary-color-bckg">
                         <h3>
                             <a href="https://werlabs.se/halsokontroll-large/" title="Hälsokontroll Large">
                                 Hälsokontroll Large
@@ -202,11 +202,11 @@
                             </li>
                         </ul>
 
-                        <button type="button" title="Beställ Hälsokontroll Large" class="pineGreen-btn">
+                        <button type="button" title="Beställ Hälsokontroll Large" class="tertiary-color-btn">
                             <span>Beställ</span>
                         </button>
 
-                        <a href="https://werlabs.se/halsokontroll-large/" title="Hälsokontroll Large" class="show-more pineGreen">
+                        <a href="https://werlabs.se/halsokontroll-large/" title="Hälsokontroll Large" class="show-more tertiary-color">
                             <span>Visa mer</span>
                         </a>
                     </div>
@@ -222,7 +222,7 @@
     </section>
 
 
-    <section class="lp-section lp-section--why">
+    <section>
         <div class="w-container">
             <div class="js-carousel-items carousel">
                 <div>
